Added Actor manual actions. POST request returns empty body and does not seem to move actor. Troubleshooting was fruitless, possible bug at backend or lack of neurons in my brain.

--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -108,13 +108,15 @@ div.box {
 
 .stats-subsection {
   display: flex;
-  justify-content: space-around;
   height: 40%;
   width: 100%;
   font-size: 15pt;
 }
 
 .stats-subsection-column {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .level-tile{
