--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -1,4 +1,4 @@
-html,
+styhtml,
 body {
   width: 100%;
   height: 100%;
@@ -118,6 +118,38 @@ div.box {
   flex-direction: column;
   flex-grow: 1;
   font-size: 15pt;
+}
+
+.view-cone-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20vw;
+  min-height: 100pt;
+  height: fit-content;
+  margin: 10pt;
+  padding: 10pt;
+  background-color: gray;
+}
+
+.view-cone-header {
+  height: 10%;
+  width: 100%;
+  margin-bottom: 2vw;
+  text-align: center;
+  font-size: 30pt;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.view-cone-grid {
+  display: grid;
+  grid-template-rows: repeat(4, 6vw);
+  grid-template-columns: repeat(3, 6vw);
+  gap: 1vw;
+}
+
+.view-cone-tile {
+  background-color: lightgray;
 }
 
 .level-tile{
