--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -1,4 +1,4 @@
-styhtml,
+html,
 body {
   width: 100%;
   height: 100%;
@@ -149,7 +149,7 @@ div.box {
 }
 
 .view-cone-tile {
-  background-color: lightgray;
+  display: flex;
 }
 
 .level-tile{
