--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -147,8 +147,8 @@ div.box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20vw;
-  min-height: 100pt;
+  width: 12vw;
+  max-height: 50vh;
   height: fit-content;
   margin: 10pt;
   padding: 10pt;
@@ -166,13 +166,26 @@ div.box {
 
 .view-cone-grid {
   display: grid;
-  grid-template-rows: repeat(4, 6vw);
-  grid-template-columns: repeat(3, 6vw);
-  gap: 1vw;
+  grid-template-rows: repeat(4, 3.8vw);
+  grid-template-columns: repeat(3, 3.8vw);
+  gap: 1vh;
 }
 
 .view-cone-tile {
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.actor-icon {
+  position: relative;
+  z-index: 10;
+  width: 50%;
+  height: auto;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 0.5vw;
 }
 
 .level-tile{
