--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -75,48 +75,54 @@ div.box {
 .control-panel {
   display: flex;
   justify-content: space-evenly;
-  padding: 5pt;
+  padding: 3pt;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
-  background-color: gray;
+  background: none;
   border-radius: 2pt;
 }
 
 .control-panel button {
-  margin: 7pt;
+  margin-left: 7px;
+  margin-right: 7px;
+  padding: 10pt;
   font-family: 'Segoe UI', sans-serif;
-  font-size: 24pt;
+  font-size: 20pt;
   border-radius: 8px;
   border: none;
+  background-color: #5ee7ac;
+  cursor: pointer;
 }
 
 .control-panel button:hover {
-  background-color: #c1c1c1;
+  background-color: #6cd1a2;
 }
 
 .level-container {
   display: flex;
   background-color: #292828;
   flex-wrap: wrap;
-  padding: 1pt;
+  padding: 4pt;
   margin: 10pt;
   flex-direction: row;
+  border-radius: 8pt;
 }
 
 .stats-container {
-  width: 20vw;
+  width: 15vw;
   min-height: 100pt;
   height: fit-content;
   margin: 10pt;
   padding: 10pt;
-  background-color: gray;
+  background-color: rgba(237, 228, 218, 0.9);
+  border-radius: 8pt;
 }
 
 .stats-header {
   height: 10%;
   width: 100%;
-  margin: 0;
+  margin: 0.7vw;
   text-align: center;
   font-size: 30pt;
   font-family: 'Segoe UI', sans-serif;
@@ -163,8 +169,9 @@ div.box {
   max-height: 50vh;
   height: fit-content;
   margin: 10pt;
-  padding: 10pt;
-  background-color: gray;
+  padding: 12pt;
+  background-color: rgba(237, 228, 218, 0.9);
+  border-radius: 8pt;
 }
 
 .view-cone-header {
@@ -187,6 +194,7 @@ div.box {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 2pt;
 }
 
 .actor-icon {
@@ -207,6 +215,7 @@ div.box {
   padding: 1pt;
   margin: 1pt;
   background-color: #bcb6b6;
+  cursor: pointer;
 }
 
 .selected-tile {
@@ -228,4 +237,5 @@ div.box {
   width: 20pt;
   border-radius: 50%;
   background-color: #FFF;
+  cursor: pointer;
 }
