--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -195,6 +195,7 @@ div.box {
   align-items: center;
   justify-content: center;
   border-radius: 2pt;
+  background-color: #c6c6c6;
 }
 
 .actor-icon {
@@ -214,7 +215,7 @@ div.box {
   width: 20pt;
   padding: 1pt;
   margin: 1pt;
-  background-color: #bcb6b6;
+  background-color: #c6c6c6;
   cursor: pointer;
 }
 
