--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -182,6 +182,7 @@ div.box {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #c6c6c6;
 }
 
 .actor-icon {
@@ -201,7 +202,7 @@ div.box {
   width: 20pt;
   padding: 1pt;
   margin: 1pt;
-  background-color: #bcb6b6;
+  background-color: #c6c6c6;
 }
 
 .selected-tile {
