Copy paste tiles (#51)
---------

Co-authored-by: Marvin Domnick <marvindomnick@outlook.de>

--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -171,6 +171,14 @@ div.box {
   font-size: 15pt;
 }
 
+.stats-copy-paste-container {
+  display: flex;
+  width: 25%;
+  justify-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .view-cone-container {
   display: flex;
   flex-direction: column;
