fixing view cone

--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -126,9 +126,9 @@ div.box {
   flex-direction: row;
 }
 
-.fgh {
+.info {
   color: #FFF;
-  margin: 50pt;  
+  margin: 10pt;  
   padding: 10pt;
   background-color: #363636;  
   font-size: 20pt;
