--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -128,10 +128,15 @@ div.box {
 
 .fgh {
   color: #FFF;
-  margin: 50pt;  
+  margin: 10pt;  
   padding: 10pt;
   background-color: #363636;  
   font-size: 20pt;
+}
+
+a {
+  color: #505050;
+  font-size: 15pt;
 }
 
 .stats-container {
