--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -127,16 +127,16 @@ div.box {
 }
 
 .fgh {
-  color: #FFF;
-  margin: 10pt;  
+  color: #131313;
+  margin: 6pt;
   padding: 10pt;
-  background-color: #363636;  
-  font-size: 20pt;
+  background-color: #ffffff;  
+  font-size: 18pt;
 }
 
 a {
-  color: #505050;
-  font-size: 15pt;
+  color: #888888;
+  font-size: 10pt;
 }
 
 .stats-container {
